CSS de registro atualizado

--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -24,7 +24,8 @@
   </head>
   
     
-    <body class="fundo centro">
+  <body class="fundo centro-login">
+
       <main>
       <!-- inicio do card REGISTER I-->
       <section class="container-principal">
