Alguns ajustes feitos

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -190,7 +190,7 @@
             em <span class="atencao"> TRADES</span>
           </h2>
           <br />
-          <a href="./login/registro1.html" class="promo-btn"
+          <a href="./login/registro.html" class="promo-btn"
             >Registre-se Agora</a
           >
         </div>
