--- a/front-end/venda-compra/vendas-cripto.html
+++ b/front-end/venda-compra/vendas-cripto.html
@@ -27,20 +27,37 @@
 
     <header class="container-header">
         <section class="section-header">
-            <a href="../index.html"><img src="../imgs/logo.gif" alt="logotipo" class="logotipo"></a>
-            <nav class="nav-bar">
-                <a href="../venda-compra/compras-cripto.html" class="links-header p">Compre Cripto</a>
-                <a href="../venda-compra/vendas-cripto.html" class="links-header p">Trade Cripto</a>
-                <a href="../index.html" class="links-header p">Sobre GL Cripto</a>
-            </nav>
+          <a href="../index.html"
+            ><img src="../imgs/logo.gif" alt="logotipo" class="logotipo"
+          /></a>
+          <nav class="nav-bar">
+            <a href="../venda-compra/compras-cripto.html" class="links-header p"
+              >Compre Cripto</a
+            >
+            <a href="../venda-compra/vendas-cripto.html" class="links-header p"
+              >Trade Cripto</a
+            >
+            <a href="../index.html" class="links-header p">Sobre GL Cripto</a>
+          </nav>
         </section>
         <section class="section-header">
-            <a href="../login/login.html" class="box-link">ENTRAR</a>
-            <a href="../login/registro1.html" class="box-link2"><span class="iconify icon" data-icon="tabler:gift" data-inline="false"></span>CADASTRAR-SE</a>
-            <div class="box-qr"><span class="iconify qr-code" data-icon="mdi:qrcode" data-inline="false"></span></div>
-
+          <a href="../venda-compra/compras-cripto.html" class="box-link2"
+            ><span
+              class="iconify"
+              data-icon="tdesign:money"
+              data-width="24"
+              data-height="24"
+            ></span>
+            DEPOSITAR</a
+          >
+          <a href="../usuario/usuario.html" class="link-none"
+            ><span
+              class="iconify icon-user"
+              data-icon="mingcute:user-4-fill"
+            ></span
+          ></a>
         </section>
-    </header>
+      </header>
 
     <h2 class="titulo-atencao">VENDER CRIPTO</h2>
     <main class="container-main">
