Conexão com a transação iniciada mas não finalizada
A conexão de transacão do back com o front foi iniciada mas não finalizada.
Ainda é necessário eu verificar se os dados enviados no JSON estão certos e se a carteira é devidamente atualizada

--- a/front-end/login/login.html
+++ b/front-end/login/login.html
@@ -91,7 +91,11 @@
             </button>
           </div>
           <div class="centro">
-            <p class="link-simples texto-centro">NOW REGISTER</p>
+            <p class="">
+              <a href="../login/registro.html" class="link-simples texto-centro"
+                >NOW REGISTER</a
+              >
+            </p>
           </div>
         </div>
       </section>
