--- a/front-end/venda-compra/compras-cripto.html
+++ b/front-end/venda-compra/compras-cripto.html
@@ -145,18 +145,16 @@
             </div>
 
             <div class="compra-form">
-                <form class="container-form">
+                <form class="container-form" id="formulario">
 
                     <div class="card-input">
                         <label class="label-input">Pagar</label>
                         <div class="input-box">
-                            <input type="number" id="valorPagar" name="valorPagar" placeholder="00,00" class="input-text">
+                            <input type="number" id="valorPagar" name="balance" placeholder="00,00" class="input-text">
                             <div class="linha">
                                 <img src="../imgs/coin-stack.png" alt="COIN" class="icon-coin">
-                                <select class="select-cedula" name="moeda-pagar" id="moeda-pagar">
-                                    <option class="opcao-select" value="BRL" >BRL</option>
-                                    <option class="opcao-select" value="USD">USD</option>
-                                    <option class="opcao-select" value="EUR">EUR</option>
+                                <select class="select-cedula moedas1" name="moeda-pagar" id="moeda-pagar">
+                                    
                                 </select>
                             </div>
                         </div>
@@ -168,12 +166,7 @@
                             <input type="number" id="valorPagar" name="valorPagar" placeholder="00,00" class="input-text">
                             <div class="linha">
                                 <img src="../imgs/coin-stack.png" alt="COIN" class="icon-coin">
-                                <select class="select-cedula" name="moeda-pagar" id="moeda-pagar">
-                                    <option class="opcao-select" value="BRL">BTC</option>
-                                    <option class="opcao-select" value="USD">ETH</option>
-                                    <option class="opcao-select" value="EUR">XRP</option>
-                                    <option class="opcao-select" value="EUR">BNB</option>
-                                    <option class="opcao-select" value="EUR">DOG</option>
+                                <select class="select-cedula moedas2" name="moeda-receber" id="moeda-pagar">
                                 </select>
                             </div>
                         </div>
@@ -190,6 +183,9 @@
     <footer class="container-footer">
         <h2 class="copy">Desenvolvido por Lucas e Guilherme&copy;</h2> 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/compra.js"></script>
     
 </body>
 </html>
