--- a/front-end/venda-compra/compras-cripto.html
+++ b/front-end/venda-compra/compras-cripto.html
@@ -150,7 +150,7 @@
                     <div class="card-input">
                         <label class="label-input">Receber</label>
                         <div class="input-box">
-                            <input type="number" id="valorPagar" name="balance" placeholder="00,00" class="input-text">
+                            <input type="number" id="valorPagar" name="balance" placeholder="00,00" class="input-text receber-input">
                             <div class="linha">
                                 <img src="../imgs/coin-stack.png" alt="COIN" class="icon-coin">
                                 <select class="select-cedula moedas2" name="receber" id="moeda-pagar">
@@ -164,7 +164,7 @@
                         <label class="label-input">Pagar</label>
                         
                         <div class="input-box">
-                            <input type="number" id="valorPagar" name="" placeholder="00,00" class="input-text">
+                            <input type="number" id="valorPagar" name=""  placeholder="00,00" class="input-text pagar-input" readonly="true">
                             <div class="linha">
                                 <img src="../imgs/coin-stack.png" alt="COIN" class="icon-coin">
 
