--- a/front-end/venda-compra/vendas-cripto.html
+++ b/front-end/venda-compra/vendas-cripto.html
@@ -150,7 +150,7 @@
                     <div class="card-input">
                         <label class="label-input">Vender</label>
                         <div class="input-box">
-                            <input type="number" id="valorPagar" name="amountToSell" placeholder="00,00" class="input-text">
+                            <input type="number" id="valorPagar" name="amountToSell" placeholder="00,00" class="input-text pagar-input">
                             <div class="linha">
                                 <img src="../imgs/coin-stack.png" alt="COIN" class="icon-coin">
                                 <select class="select-cedula moedas1" name="idCryptoSell" id="moeda-pagar">
@@ -163,7 +163,7 @@
                     <div class="card-input">
                         <label class="label-input">Receber</label>
                         <div class="input-box">
-                            <input type="number" id="valorPagar" name="valorPagar" placeholder="00,00" class="input-text">
+                            <input type="number" id="valorPagar" name="valorPagar" placeholder="00,00" class="input-text receber-input" readonly="true">
                             <div class="linha">
                                 <img src="../imgs/coin-stack.png" alt="COIN" class="icon-coin">
                                 <select class="select-cedula moedas2" name="idCryptoReceive" id="moeda-pagar">
