Tabela de criptos atualizada
Agora a tabela de criptos tem a funcionalidade de puxar as criptos existentes no banco de dados e colocar na tela do usuário

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -98,81 +98,7 @@
 
         <section class="container-tabela">
           <h2 class="tabela-titulo">Populares</h2>
-          <div class="tabela-box">
-            <div class="linha-logo">
-              <div class="logo-box">
-                <img
-                  src="./imgs/logos/bitcoin.png"
-                  alt="logo"
-                  class="coin-logo"
-                />
-                <h2 class="coin-sigla">BTC</h2>
-                <p class="coin-nome">Bitcoin</p>
-              </div>
-              <div class="valores-box">
-                <h2 class="tabela-valores">$98.492,26</h2>
-              </div>
-              <div class="bonus-box">
-                <h3 class="bonus-valor1">+0,39%</h3>
-              </div>
-            </div>
-
-            <div class="linha-logo">
-              <div class="logo-box">
-                <img src="./imgs/logos/eth.png" alt="logo" class="coin-logo" />
-                <h2 class="coin-sigla">ETH</h2>
-                <p class="coin-nome">Ethereum</p>
-              </div>
-              <div class="valores-box">
-                <h2 class="tabela-valores">$3.440,26</h2>
-              </div>
-              <div class="bonus-box">
-                <h3 class="bonus-valor2">-0,27%</h3>
-              </div>
-            </div>
-
-            <div class="linha-logo">
-              <div class="logo-box">
-                <img src="./imgs/logos/xrp.png" alt="logo" class="coin-logo" />
-                <h2 class="coin-sigla">XRP</h2>
-                <p class="coin-nome">Ripple</p>
-              </div>
-              <div class="valores-box">
-                <h2 class="tabela-valores">$1,5932</h2>
-              </div>
-              <div class="bonus-box">
-                <h3 class="bonus-valor2">-0,54%</h3>
-              </div>
-            </div>
-
-            <div class="linha-logo">
-              <div class="logo-box">
-                <img src="./imgs/logos/bnb.png" alt="logo" class="coin-logo" />
-                <h2 class="coin-sigla">BNB</h2>
-                <p class="coin-nome">Binance</p>
-              </div>
-              <div class="valores-box">
-                <h2 class="tabela-valores">$644,72</h2>
-              </div>
-              <div class="bonus-box">
-                <h3 class="bonus-valor1">+0,38%</h3>
-              </div>
-            </div>
-
-            <div class="linha-logo">
-              <div class="logo-box">
-                <img src="./imgs/logos/doge.png" alt="logo" class="coin-logo" />
-                <h2 class="coin-sigla">DOGE</h2>
-                <p class="coin-nome">Dogecoin</p>
-              </div>
-              <div class="valores-box">
-                <h2 class="tabela-valores">$0,4174</h2>
-              </div>
-              <div class="bonus-box">
-                <h3 class="bonus-valor1">+0,77%</h3>
-              </div>
-            </div>
-          </div>
+          <div class="tabela-box"></div>
         </section>
       </section>
 
@@ -201,4 +127,7 @@
       <h2 class="copy">Desenvolvido por Lucas e Guilherme&copy;</h2>
     </footer>
   </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="./js/list-cryptos.js"></script>
 </html>
