Depósito e histórico finalizados
O depósito e o histórico foram finalizados com sucesso, porém no front-end o histórico fica colado com o footer quando temos muitas transações feitas

--- a/front-end/usuario/usuario.html
+++ b/front-end/usuario/usuario.html
@@ -48,7 +48,7 @@
           </nav>
         </section>
         <section class="section-header">
-          <a href="../venda-compra/compras-cripto.html" class="box-link2"
+          <a href="../usuario/deposito.html" class="box-link2"
             ><span
               class="iconify"
               data-icon="tdesign:money"
@@ -57,6 +57,7 @@
             ></span>
             DEPOSITAR</a
           >
+
           <a href="./usuario.html" class="link-none"
             ><span
               class="iconify icon-user"
@@ -109,20 +110,18 @@
 
           <div class="user-dados">
             <span
-              class="icon-user iconify"
+              class="icon-user iconify sheet-icon"
               data-icon="streamline:parachute-drop"
               data-inline="false"
             ></span>
-            <h2 class="nome-user">Cripto-Drop</h2>
+            <h2 class="nome-user">Histórico</h2>
             <div class="dados-drop">
               <div class="coin">
-                <img src="../imgs/logos/xrp.png" alt="coin" class="logo-coin" />
-                <h2 class="nome-coin">XRP</h2>
-                <p class="text-coin">Ripple</p>
-                <p class="valor-coin">$1,5932</p>
+                <h2 class="nome-coin">Veja o seu histórico</h2>
+                <p class="valor-coin">De transações</p>
               </div>
             </div>
-            <p class="btn-drop">Não Disponivél</p>
+            <a href="./historico.html"><p class="btn-drop">Histórico</p></a>
           </div>
         </section>
 
