--- a/front-end/venda-compra/vendas-cripto.html
+++ b/front-end/venda-compra/vendas-cripto.html
@@ -41,15 +41,8 @@
           </nav>
         </section>
         <section class="section-header">
-          <a href="../venda-compra/compras-cripto.html" class="box-link2"
-            ><span
-              class="iconify"
-              data-icon="tdesign:money"
-              data-width="24"
-              data-height="24"
-            ></span>
-            DEPOSITAR</a
-          >
+          <a href="../usuario/deposito.html" class="box-link2"><span class="iconify" data-icon="tdesign:money" data-width="24" data-height="24"></span> DEPOSITAR</a>
+
           <a href="../usuario/usuario.html" class="link-none"
             ><span
               class="iconify icon-user"
