Erro no depósito arrumado
Havia um erro grave no depósito que já foi corrigido

--- a/front-end/usuario/historico.html
+++ b/front-end/usuario/historico.html
@@ -81,17 +81,7 @@
             <th class="tb-titulo">Moeda Recebida</th>
           </tr>
         </thead>
-        <tbody id="body-tabela">
-          <tr class="tb-linha">
-            <td class="tb-status">Completa</td>
-            <td class="tb-dados">16/11/2024</td>
-            <td class="tb-dados">Compra</td>
-            <td class="tb-dados">Guilherme</td>
-            <td class="tb-dados">Lucas Caribé</td>
-            <td class="tb-dados">900 BTC</td>
-            <td class="tb-dados">90000 USD</td>
-          </tr>
-        </tbody>
+        <tbody id="body-tabela"></tbody>
       </table>
     </main>
 
