Minusculos ajustes foram feitos

--- a/front-end/usuario/deposito.html
+++ b/front-end/usuario/deposito.html
@@ -30,6 +30,23 @@
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- SweetAlert2 CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+
+    <!-- SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Include the Dark theme -->
+    <!-- Tema escuro para SweetAlert2 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark/dark.min.css"
+    />
+
+    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
   </head>
   <body class="fundo centro">
     <header class="container-header">
@@ -135,6 +152,11 @@
       </section>
     </main>
   </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="sweetalert2/dist/sweetalert2.min.js"></script>
+
   <script src="../js/deposito.js"></script>
 </html>
