Ajustes diversos foram feitos
Alguns ajustes foram feitos para que o front-end seja mais usual e intuitivo, tais como:

- fazer alert mais bonito *
- fazer verificação se as requisições estão corretas e mostrar para o usuário oq deu errado *
- fazer troca de header para quando o usuário estiver logado *
- arrumar sistema de depósito *
- arrumar histórico de transação para ter um footer *
- Fazer um JS para quando o usuário clicar em airdrop aparecer uma msg de que ele não está disponível *
- fazer logo para o site *
- fazer mensagens "rápidas" para quando os dados não estiverem devidamente preenchidos nos inputs *
- Arrumar o token para que o usuário possa continuar logado mesmo abrindo uma nova aba do Chrome  *
- arrumar o email para que ele seja enviado quando o usuário for criado

--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro 1</title>
 
+    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css">
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+
+
     <!-- Iconify Script -->
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
@@ -31,7 +35,9 @@
       <section class="container-principal">
           <!-- Cabeçalho - LOGOTIPO - RETORNAR-->
           <header class="header-login">
-          <img class="logotipo" src="../imgs/logo.gif" alt="logotipo" />
+            <a href="../index.html"
+            ><img src="../imgs/logo.png" alt="logotipo" class="logotipo"
+          /></a>
           <a href="../index.html">
               <span
               class="iconify seta"
@@ -118,6 +124,8 @@
       
       
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../js/register.js"></script>
   </html>
