--- a/front-end/usuario/deposito.html
+++ b/front-end/usuario/deposito.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deposito</title>
+    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css"
+      rel="stylesheet"
+    />
     <!-- Iconify Script -->
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
@@ -52,7 +57,7 @@
     <header class="container-header">
       <section class="section-header">
         <a href="../index.html"
-          ><img src="../imgs/logo.gif" alt="logotipo" class="logotipo"
+          ><img src="../imgs/logo.png" alt="logotipo" class="logotipo"
         /></a>
         <nav class="nav-bar">
           <a href="../venda-compra/compras-cripto.html" class="links-header p"
