--- a/front-end/usuario/historico.html
+++ b/front-end/usuario/historico.html
@@ -34,7 +34,7 @@
     <header class="container-header">
       <section class="section-header">
         <a href="../index.html"
-          ><img src="../imgs/logo.gif" alt="logotipo" class="logotipo"
+          ><img src="../imgs/logo.png" alt="logotipo" class="logotipo"
         /></a>
         <nav class="nav-bar">
           <a href="../venda-compra/compras-cripto.html" class="links-header p"
