--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pagina Principal</title>
+    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css"
+      rel="stylesheet"
+    />
+
     <!-- Iconify Script -->
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
@@ -34,7 +40,7 @@
     <header class="container-header">
       <section class="section-header">
         <a href="./index.html"
-          ><img src="./imgs/logo.gif" alt="logotipo" class="logotipo"
+          ><img src="./imgs/logo.png" alt="logotipo" class="logotipo"
         /></a>
         <nav class="nav-bar">
           <a href="./venda-compra/compras-cripto.html" class="links-header p"
@@ -56,7 +62,7 @@
           ></span
           >CADASTRAR-SE</a
         >
-        <div class="box-qr">
+        <div class="box-qr" id="qrcode-link">
           <span
             class="iconify qr-code"
             data-icon="mdi:qrcode"
@@ -88,7 +94,7 @@
               <a href="#" class="link-simples">GLCOINS</a> na Carteira
             </p>
             <div class="espaco2">
-              <a href="#" class="btn-drop">Participe</a>
+              <a href="#" class="btn-drop" id="airdrop-link">Participe</a>
             </div>
           </div>
           <div class="drop-img">
@@ -127,7 +133,9 @@
       <h2 class="copy">Desenvolvido por Lucas e Guilherme&copy;</h2>
     </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./js/list-cryptos.js"></script>
+  <script src="./js/index.js"></script>
 </html>
