--- a/front-end/login/login.html
+++ b/front-end/login/login.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css"
+      rel="stylesheet"
+    />
+
     <!-- Iconify Script -->
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
 
@@ -26,7 +32,9 @@
       <section class="container-principal">
         <!-- Cabeçalho - LOGOTIPO - RETORNAR-->
         <header class="header-login">
-          <img class="logotipo" src="../imgs/logo.gif" alt="logotipo" />
+          <a href="../index.html"
+            ><img src="../imgs/logo.png" alt="logotipo" class="logotipo"
+          /></a>
           <a href="../index.html">
             <span
               class="iconify seta"
@@ -38,16 +46,17 @@
 
         <h2 class="sub-titulo">LOG IN</h2>
 
-        <form class="formulario" id="formulario">
+        <form class="formulario" id="formulario" action="">
           <!-- AQUI PROVAVELMENTE É COM TU GUI (SE FOSSE PRA EU FAZER ESSA PARTE VACILEI E NÃO ME TOQUEI)-->
           <div class="coluna">
             <label for="email" class="label-login">Email/Phone Number</label>
             <input
-              type="text"
+              type="email"
               id="email"
               name="email"
               required
               class="input-login"
+              autocomplete="username"
             />
           </div>
 
@@ -59,6 +68,7 @@
               name="password"
               required
               class="input-login"
+              autocomplete="current-password"
             />
           </div>
 
@@ -101,6 +111,8 @@
       </section>
     </main>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../js/login.js"></script>
 </html>
