--- a/front-end/login/login.html
+++ b/front-end/login/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../imgs/logo.ico" />
     <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css"
