--- a/front-end/usuario/historico.html
+++ b/front-end/usuario/historico.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Historico</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../imgs/logo.ico" />
     <!-- Iconify Script -->
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
